@@ -1,5 +1,8 @@
 Release Notes
 
+* 2/28/2019
+  * added useZipToPin
+
 * 2/27/2019
   * checking nNewJobs when setting exhausted after scouts
 
